# GENAI-WORKSHOP-Resource

./: .gitignore  genai_notebook.ipynb  main.py  pyproject.toml
notebooks/: 01_environment_check.ipynb  02_ai_refresher.ipynb  03_text_pipeline.ipynb  04_image_pipeline.ipynb  05_fine_tuning_model.ipynb  06_rag_into.ipynb  07_mini_rag.ipynb  08_agent_basics.ipynb  09_agent_tools_actions.ipynb  10_agent_memory_learning.ipynb  11_llm_powered_agent.ipynb  test_agent_file.txt
