[project]
name = "genai-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.1.0",
    "beautifulsoup4==4.12.3",
    "bitsandbytes>=0.46.1",
    "commitizen>=4.8.3",
    "datasets==3.1.0",
    "faiss-cpu==1.8.0",
    "gradio==5.5.0",
    "ipywidgets==8.1.5",
    "jupyter==1.1.1",
    "matplotlib==3.9.2",
    "notebook==7.2.2",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pandas==2.2.0",
    "pillow==10.4.0",
    "psutil==6.1.0",
    "pytest==8.3.3",
    "requests==2.32.3",
    "rich>=14.0.0",
    "scikit-learn==1.5.2",
    "seaborn==0.13.2",
    "sentence-transformers==3.3.0",
    "tensorflow==2.18.0",
    "textual>=4.0.0",
    "tokenizers==0.20.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.66.6",
    "transformers==4.46.0",
    "ultralytics==8.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
